# Real-time-RAG-finance-news

./: .gitignore  README.md
modules/inference_pipeline/simple-rag/: pyproject.toml
modules/inference_pipeline/simple-rag/simple_rag/: app.py  clean_qdrant.py  constants.py  custom_qdrant.py  rag_financial_data.py  verify_qdrant.py
modules/streaming_pipeline/: pyproject.toml
modules/streaming_pipeline/deploy/: Dockerfile  main.tf  terraform.tfstate  terraform.tfstate.backup  to_ecr.sh  user_data.tpl  variables.tf
modules/streaming_pipeline/streaming_pipeline/: alpaca_stream.py  query_qdrant.py
modules/streaming_pipeline/tools/: run_real_time.py
